add: another unit test on graph methods